--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kurishutofu/game-module",
+  "name": "game-module",
   "author": "kurishutofu",
   "description": "game module",
   "private": false, 
