--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "crypto-js": "^4.1.1",
+    "seed-random": "^2.2.0",
     "three": "^0.149.0",
     "uuid": "^9.0.0"
   }
